--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -54,7 +54,7 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item layui-nav-itemed">
-                    <a  href="javascript:;">客户管理</a>
+                    <a href="javascript:;">客户管理</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;">客户列表</a></dd>
                         <dd><a href="javascript:;">业务列表</a></dd>
@@ -75,24 +75,13 @@
             </ul>
         </div>
     </div>
-
     <div class="layui-body">
-        <!-- 内容主体区域 -->
-        <div style="padding: 15px;">内容主体区域</div>
+        <p>主要内容</p>
     </div>
-
     <div class="layui-footer">
         <!-- 底部固定区域 -->
         © com.cloudwise 商标注册管理系统
     </div>
 </div>
-<script src="../src/layui.js"></script>
-<script>
-    //JavaScript代码区域
-    layui.use('element', function () {
-        var element = layui.element;
-
-    });
-</script>
 </body>
 </html>
