--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,25 +6,12 @@
     <title>后台布局</title>
     <link rel="stylesheet" href="/layui/css/layui.css">
     <script src="/layui/layui.js"></script>
+    <link rel="import" href="/goto/toUser" id="userPage"/>
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo" style="font-size: x-large">商标注册管理系统</div>
-        <!-- 头部区域（可配合layui已有的水平导航） -->
-        <!--<ul class="layui-nav layui-layout-left">
-            <li class="layui-nav-item"><a href="">控制台</a></li>
-            <li class="layui-nav-item"><a href="">商品管理</a></li>
-            <li class="layui-nav-item"><a href="">用户</a></li>
-            <li class="layui-nav-item">
-                <a href="javascript:;">其它系统</a>
-                <dl class="layui-nav-child">
-                    <dd><a href="">邮件管理</a></dd>
-                    <dd><a href="">消息管理</a></dd>
-                    <dd><a href="">授权管理</a></dd>
-                </dl>
-            </li>
-        </ul>-->
+        <div class="layui-logo" style="font-size: x-large;margin-left: 1%">商标注册管理系统</div>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
@@ -47,14 +34,14 @@
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:;">系统管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">用户管理</a></dd>
-                        <dd><a href="javascript:;">角色管理</a></dd>
-                        <dd><a href="javascript:;">菜单管理</a></dd>
-                        <dd><a href="javascript:;">部门管理</a></dd>
+                        <dd class="layui-this"><a href="/goto/toUser">用户管理</a></dd>
+                        <dd><a href="/goto/toRole">角色管理</a></dd>
+                        <dd><a href="/goto/toMenu">菜单管理</a></dd>
+                        <dd><a href="/goto/toDept">部门管理</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item layui-nav-itemed">
-                    <a  href="javascript:;">客户管理</a>
+                    <a href="javascript:;">客户管理</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;">客户列表</a></dd>
                         <dd><a href="javascript:;">业务列表</a></dd>
@@ -78,7 +65,7 @@
 
     <div class="layui-body">
         <!-- 内容主体区域 -->
-        <div style="padding: 15px;">内容主体区域</div>
+        <iframe id="iframeMain" src="/goto/toUser" class="layadmin-iframe" frameborder="0" style="width: 100%;height: 100%"></iframe>
     </div>
 
     <div class="layui-footer">
@@ -89,9 +76,19 @@
 <script src="../src/layui.js"></script>
 <script>
     //JavaScript代码区域
-    layui.use('element', function () {
+    layui.use(['element', 'jquery'], function () {
         var element = layui.element;
-
+        let $ = layui.jquery;
+        $(function () {
+            //页面加载之后执行的代码
+            //点击a标签的时候，修改iframe的src属性
+            $("dd>a").click(function (event) {
+                //阻断超链接的跳转事件
+                event.preventDefault();
+                //取得超链接对象的href属性值赋给iframe的src属性
+                $("#iframeMain").attr("src", $(this).attr("href"));
+            })
+        })
     });
 </script>
 </body>
