--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
             <canvas id="demo-canvas"></canvas>
             <div class="logo_box">
                 <h3>欢迎你</h3>
-                <form id="loginForm" action="toHome" onsubmit="return checkLogin()">
+                <form id="loginForm" action="/login" method="post" onsubmit="return checkLogin()">
                     <div class="input_outer">
                         <span class="u_user"></span>
                         <input name="username" id="username" class="text" style="color: #FFFFFF !important" type="text"
